02-仪表盘页面样式开发

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     /* 文件系统路径别名设置 */
     "baseUrl": "./",  // 解析非相对模块的基础地址，默认是当前目录
     "paths": { // 路径映射，相对于baseUrl
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@assets/*": ["src/assets/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
