--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
+    "echarts": "^5.3.3",
+    "element-plus": "^2.2.15",
     "pinia": "^2.0.21",
+    "sass": "^1.54.5",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/echarts": "^4.9.16",
     "@types/node": "^18.7.13",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
